--- a/week_2_bootstrap_exercises_1/index.html
+++ b/week_2_bootstrap_exercises_1/index.html
@@ -58,9 +58,9 @@
         </div>
      </nav>
      <div class="p-5 bg-light">
-        <h1 class="mb-3">Heading</h1>
-        <h4 class="mb-3">Subheading</h4>
-        <a class="btn btn-primary" href="" role="button">Call to action</a>
+        <h1 class="mb-3">Hello, world!</h1>
+        <h4 class="mb-3"> This is Exercise #9. It includes a large callout called a jumbotron and three supporting pieces of content.</h4>
+        <a class="btn btn-primary" href="" role="button">Learn more</a>
       </div>
       
       <div class="container">
